fix(tablet): overflow at 600-700px screen width
The bug: https://discord.com/channels/505093832157691914/516751477306294273/1459409540440391702

--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ padding: var(--padding-size-3) var(--padding-size-4);
 /* both tablet and mobile */
 @media (max-width: 1000px) {
   html {
-    --padding-size-1: 80px;
+    /* --padding-size-1: 80px; */
   }
 
   .project-cards-container {
@@ -367,6 +367,7 @@ padding: var(--padding-size-3) var(--padding-size-4);
 
   .page-header {
     position: relative;
+    padding: 0;
   }
 
   .page-header::before {
